# bonsai-3D

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  drizzle.config.ts  package.json  tsconfig.json
apps/api/src/: config.ts  index.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: assets.ts  auth.ts  reconstruction.ts  uploads.ts  variations.ts  workspaces.ts
apps/api/src/services/: meshy.ts  queue.ts  storage.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.tsx  index.css  main.tsx
apps/web/src/components/: inspector.tsx  photo-upload.tsx  toolbar.tsx  variation-gallery.tsx
apps/web/src/lib/: api.ts  deformation.ts  style-presets.ts
apps/web/src/pages/: auth.tsx  create-workspace.tsx  dashboard.tsx  editor.tsx  (+1 more)
apps/worker/: .env.example  package.json  tsconfig.json
apps/worker/src/: index.ts
docs/: architecture.md  editor-data-model.md  reconstruction-pipeline.md  roadmap.md
docs/ADRs/: 001-system-architecture.md  002-reconstruction-strategy.md  003-editor-data-model.md
docs/api/: openapi.yaml
docs/qa/: acceptance-tests.md
infra/docker/: Dockerfile.api  Dockerfile.recon-python  docker-compose.yml
scripts/: dev.sh  seed.sh  setup.sh
services/recon-python/: Makefile  pyproject.toml  requirements.txt
services/recon-python/src/: deformation.py  main.py  mesh_cleanup.py  models.py  photogrammetry.py  placeholder_mesh.py  preprocessing.py  segmentation.py  skeleton_extraction.py  surface_reconstruction.py
services/skeleton/: package.json
services/skeleton/src/: deformation.ts  index.ts  types.ts
(+12 files in other folders)
