[project]
name = "bonsai3d-recon"
version = "0.1.0"
description = "Bonsai-3D Python reconstruction service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "pillow>=10.0.0,<11.0",
    "numpy>=1.26.0,<2.0",
    "scipy>=1.12.0,<2.0",
    "trimesh>=4.0.0,<5.0",
    "scikit-image>=0.22.0,<1.0",
    "opencv-python-headless>=4.9.0,<5.0",
    "rembg>=2.0.50,<3.0",
    "pydantic>=2.0.0,<3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 88
